# vSMR

./: .gitignore  CMakeLists.txt  Conanfile.py  README.md
.github/workflows/: build.yml
profiles/: win32
vSMR/: CMakeLists.txt  SMRPlugin.cpp  SMRPlugin.hpp  SMRRadar.cpp  SMRRadar.hpp  vSMR.vcxproj
